--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
   text-align: center;
   color: #007bff;
+  
   background-image: url(https://images.cdn3.stockunlimited.net/clipart/faceted-white-background_1992885.jpg);
 }
 .intro{
@@ -17,4 +18,19 @@ body{
   text-align: right;
   padding-right: 30px;
   padding-top: 20px;
+}
+
+.currentQ {
+  padding-top:  120px;
+}
+.highestScores{
+  padding-top: 120px;
+}
+.finalScreen{
+  padding-top:120px;
+}
+button{
+  background-color: #007bff;
+  color: white;
+  border-radius: 5px;
 }
